@@ -512,9 +512,9 @@ call on XML tree objects to retrieve a Python unicode representation::
   >>> etree.tounicode(el)
   u'<test><subtest/></test>'
 
-  >>> et = etree.ElementTree(el)
-  >>> etree.tounicode(et)
-  u'<test><subtest/></test>'
+  >>> tree = etree.ElementTree(el)
+  >>> etree.tounicode(tree)
+  u'<test><subtest/></test>\n'
 
 The result of ``tounicode()`` can be treated like any other Python unicode
 string and then passed back into the parsers.  However, if you want to save
