@@ -396,12 +396,13 @@ For the plain text output, the ``tounicode()`` function might become handy::
 The ElementTree class
 =====================
 
-An ``ElementTree`` is mainly a document wrapper around a tree with a root
-node.  It provides a couple of methods for parsing, serialisation and general
-document handling.  One of the bigger differences is that it serialises as a
-complete document, as opposed to a single ``Element``.  This includes top-level
-processing instructions and comments, as well as a DOCTYPE and other DTD
-content in the document::
+An ``ElementTree`` is mainly a document wrapper around a tree with a
+root node.  It provides a couple of methods for parsing, serialisation
+and general document handling.  One of the bigger differences is that
+it serialises as a complete document, as opposed to a single
+``Element``.  This includes top-level processing instructions and
+comments, an additional line break at the end, as well as a DOCTYPE
+and other DTD content in the document::
 
     >>> from StringIO import StringIO
     >>> tree = etree.parse(StringIO('''\
@@ -423,6 +424,7 @@ content in the document::
     <root>
       <a>eggs</a>
     </root>
+    <BLANKLINE>
 
     >>> # lxml 1.3.4 and later
     >>> print etree.tostring(etree.ElementTree(tree.getroot()))
@@ -432,6 +434,7 @@ content in the document::
     <root>
       <a>eggs</a>
     </root>
+    <BLANKLINE>
 
     >>> # ElementTree and lxml <= 1.3.3
     >>> print etree.tostring(tree.getroot())
@@ -492,6 +495,7 @@ The ``parse()`` function is used to parse from files and file-like objects::
 
     >>> print etree.tostring(tree)
     <root>data</root>
+    <BLANKLINE>
 
 Note that ``parse()`` returns an ElementTree object, not an Element object as
 the string parser functions::
@@ -551,10 +555,11 @@ will block and wait until data becomes available in this case::
     ...         except StopIteration:
     ...             return ""
 
-    >>> root = etree.parse(DataSource())
+    >>> tree = etree.parse(DataSource())
 
-    >>> print etree.tostring(root)
+    >>> print etree.tostring(tree)
     <root><a/></root>
+    <BLANKLINE>
 
 The second way is through a feed parser interface, given by the ``feed(data)``
 and ``close()`` methods::
